// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SauceRelated /> matches snapshot 1`] = `
<p>
  loading...
</p>
`;

exports[`<SauceRelated /> matches snapshot 2`] = `
<p>
  loading...
</p>
`;

exports[`<SauceRelated /> matches snapshot 3`] = `
<Fragment>
  <List
    items={
      Array [
        Object {
          "id": "0-Ms. Ken Rolfson",
          "link": "/sauce/view?s=a80a0491-7e32-4580-9ccd-82870ac57a27",
          "text": "Ms. Ken Rolfson",
        },
        Object {
          "id": "1-Mrs. Gisselle Effertz",
          "link": "/sauce/view?s=2e776307-3fed-40de-abd6-72bfca6854fd",
          "text": "Mrs. Gisselle Effertz",
        },
        Object {
          "id": "2-Ms. Elenora Bartoletti",
          "link": "/sauce/view?s=2f33c3ea-62b2-4292-98c4-d7d87fcadeb7",
          "text": "Ms. Elenora Bartoletti",
        },
        Object {
          "id": "3-Mrs. Ole West",
          "link": "/sauce/view?s=fb3a11df-70c9-4d1f-a621-dbad2e3bf8cc",
          "text": "Mrs. Ole West",
        },
        Object {
          "id": "4-Mrs. Margarita Wilkinson",
          "link": "/sauce/view?s=3a3bf5e0-913c-4eba-8dec-e180ca66d0c4",
          "text": "Mrs. Margarita Wilkinson",
        },
        Object {
          "id": "5-Miss Olin Welch",
          "link": "/sauce/view?s=f7968668-332a-4a80-8404-8bc1f11d41cb",
          "text": "Miss Olin Welch",
        },
        Object {
          "id": "6-Mrs. Alexis Brakus",
          "link": "/sauce/view?s=b11855f7-8385-447c-803f-ad6ba3d35a4b",
          "text": "Mrs. Alexis Brakus",
        },
        Object {
          "id": "7-Mrs. Braeden Monahan",
          "link": "/sauce/view?s=c20b0b3a-c90f-4073-9d4e-49adbef8eddb",
          "text": "Mrs. Braeden Monahan",
        },
        Object {
          "id": "8-Ms. Nelson Keeling",
          "link": "/sauce/view?s=a7e6dd76-ab18-45d6-ae7e-6b883b10f30b",
          "text": "Ms. Nelson Keeling",
        },
        Object {
          "id": "9-Miss Joe Schumm",
          "link": "/sauce/view?s=70981224-f390-42fa-b7a0-595afa5e6186",
          "text": "Miss Joe Schumm",
        },
        Object {
          "id": "10-Dr. Milton Nader",
          "link": "/sauce/view?s=485d4729-a353-412d-a05d-6b3616fc0bb2",
          "text": "Dr. Milton Nader",
        },
        Object {
          "id": "11-Dr. Antonia Hand",
          "link": "/sauce/view?s=4066af4c-eb06-4b52-842e-ead708ea2585",
          "text": "Dr. Antonia Hand",
        },
        Object {
          "id": "12-Mrs. Freddy Miller",
          "link": "/sauce/view?s=d94bd677-2278-48bf-a80c-754ca3f11f3f",
          "text": "Mrs. Freddy Miller",
        },
        Object {
          "id": "13-Mrs. Russell Deckow",
          "link": "/sauce/view?s=3b9f9827-4c9d-4525-ab37-39acebeb8cc9",
          "text": "Mrs. Russell Deckow",
        },
        Object {
          "id": "14-Ms. Pearline Mann",
          "link": "/sauce/view?s=da1c4a38-0e5a-468c-b5e0-89534ae1d1f6",
          "text": "Ms. Pearline Mann",
        },
        Object {
          "id": "15-Dr. Era Leffler",
          "link": "/sauce/view?s=be256c8d-32a1-452d-932f-6a7b7c27e9a6",
          "text": "Dr. Era Leffler",
        },
        Object {
          "id": "16-Mrs. Adolfo Carter",
          "link": "/sauce/view?s=5c3ae4e9-4136-4392-87ee-c5071302391a",
          "text": "Mrs. Adolfo Carter",
        },
        Object {
          "id": "17-Mr. Cameron Ledner",
          "link": "/sauce/view?s=09f90dd6-95af-4482-a83e-3dbddde08df9",
          "text": "Mr. Cameron Ledner",
        },
        Object {
          "id": "18-Ms. Treva Abernathy",
          "link": "/sauce/view?s=4c3aee84-99f7-48dd-bca8-32537bf0b3c4",
          "text": "Ms. Treva Abernathy",
        },
        Object {
          "id": "19-Mrs. Amelie Ziemann",
          "link": "/sauce/view?s=353c39ab-baac-44b1-aaa9-8936462db6d3",
          "text": "Mrs. Amelie Ziemann",
        },
        Object {
          "id": "20-Dr. Dena Stanton",
          "link": "/sauce/view?s=832d6415-8e2e-43d1-b5dc-10648f98654e",
          "text": "Dr. Dena Stanton",
        },
        Object {
          "id": "21-Mrs. Clarabelle Lebsack",
          "link": "/sauce/view?s=c24e649c-05f0-4078-a69c-b75af8643aa2",
          "text": "Mrs. Clarabelle Lebsack",
        },
        Object {
          "id": "22-Ms. Mohammad Romaguera",
          "link": "/sauce/view?s=e0adf218-579b-4e26-9cdd-a4ce63510376",
          "text": "Ms. Mohammad Romaguera",
        },
        Object {
          "id": "23-Ms. Thora Hudson",
          "link": "/sauce/view?s=ce90ecc5-80b5-4bd6-aac3-b6744f4d8b15",
          "text": "Ms. Thora Hudson",
        },
        Object {
          "id": "24-Miss Adele McKenzie",
          "link": "/sauce/view?s=28282c4e-8007-4321-a430-271acae8c04d",
          "text": "Miss Adele McKenzie",
        },
        Object {
          "id": "25-Miss Rey Gaylord",
          "link": "/sauce/view?s=3c164ee9-31c8-4ed7-b41d-443b43744f1b",
          "text": "Miss Rey Gaylord",
        },
        Object {
          "id": "26-Miss Florine Metz",
          "link": "/sauce/view?s=54990234-11e5-4e8d-a4c2-004b4e0d53be",
          "text": "Miss Florine Metz",
        },
        Object {
          "id": "27-Ms. Ephraim Bailey",
          "link": "/sauce/view?s=8c53342b-717c-49a8-8823-a6a5712194e2",
          "text": "Ms. Ephraim Bailey",
        },
        Object {
          "id": "28-Miss Electa Krajcik",
          "link": "/sauce/view?s=9a9d0dbd-4112-4711-9d08-715394effecb",
          "text": "Miss Electa Krajcik",
        },
        Object {
          "id": "29-Mrs. Mallory Greenfelder",
          "link": "/sauce/view?s=56014d43-175a-4ed5-8342-b7d140ba3bdb",
          "text": "Mrs. Mallory Greenfelder",
        },
        Object {
          "id": "30-Mr. Tamara Ernser",
          "link": "/sauce/view?s=e3997a38-28e8-451a-9dd1-d408ec10c675",
          "text": "Mr. Tamara Ernser",
        },
        Object {
          "id": "31-Ms. Milo Wunsch",
          "link": "/sauce/view?s=d07066af-44de-4b37-91ce-2422eba54ce0",
          "text": "Ms. Milo Wunsch",
        },
      ]
    }
    title="Related Sauces"
  />
</Fragment>
`;

exports[`<SauceRelated /> matches snapshot 4`] = `
<p>
  ut eum perspiciatis veritatis et accusamus atque
</p>
`;

exports[`<SauceRelated /> matches snapshot 5`] = `
<p>
  loading...
</p>
`;

exports[`<SauceRelated /> matches snapshot 6`] = `
<p>
  loading...
</p>
`;

exports[`<SauceRelated /> matches snapshot 7`] = `
<Fragment>
  <List
    items={
      Array [
        Object {
          "id": "0-Ms. Felix Veum",
          "link": "/sauce/view?s=20061f4c-18ff-439c-bebd-866cbeaf4461",
          "text": "Ms. Felix Veum",
        },
        Object {
          "id": "1-Ms. Dan Champlin",
          "link": "/sauce/view?s=28972b8b-1927-47de-a678-e4920762fec1",
          "text": "Ms. Dan Champlin",
        },
        Object {
          "id": "2-Dr. Otha Keeling",
          "link": "/sauce/view?s=23d7af27-8f47-4ff3-a9f0-39378f54e4d0",
          "text": "Dr. Otha Keeling",
        },
        Object {
          "id": "3-Mrs. Nella Runolfsdottir",
          "link": "/sauce/view?s=26526ebe-4a9a-47b6-8cbe-000854f3d232",
          "text": "Mrs. Nella Runolfsdottir",
        },
        Object {
          "id": "4-Ms. Elvie Rippin",
          "link": "/sauce/view?s=5a8dfb9c-0286-4957-9d43-1b5d8cd62274",
          "text": "Ms. Elvie Rippin",
        },
        Object {
          "id": "5-Ms. Carlee Rowe",
          "link": "/sauce/view?s=c6eec48d-1c63-4c71-a906-9e3d7e188fca",
          "text": "Ms. Carlee Rowe",
        },
        Object {
          "id": "6-Mr. Clifton Fritsch",
          "link": "/sauce/view?s=583d52f7-b1e8-4d24-9c34-967d1fe698b1",
          "text": "Mr. Clifton Fritsch",
        },
        Object {
          "id": "7-Ms. Calista Crooks",
          "link": "/sauce/view?s=1c646d09-70d7-4d94-8567-87fec5cdfe28",
          "text": "Ms. Calista Crooks",
        },
        Object {
          "id": "8-Mrs. Sonia Gutkowski",
          "link": "/sauce/view?s=2f74fabb-917f-45ee-b116-d5c625743b33",
          "text": "Mrs. Sonia Gutkowski",
        },
        Object {
          "id": "9-Miss Austyn Kunze",
          "link": "/sauce/view?s=adfec177-b707-49ce-b64b-41a35751124e",
          "text": "Miss Austyn Kunze",
        },
        Object {
          "id": "10-Mrs. Malinda Roob",
          "link": "/sauce/view?s=ac222c03-d02d-4670-8aa9-8ef806103416",
          "text": "Mrs. Malinda Roob",
        },
        Object {
          "id": "11-Miss Lucas Bogan",
          "link": "/sauce/view?s=9aced2b1-e839-47e0-8b0b-a1b22d4e511f",
          "text": "Miss Lucas Bogan",
        },
        Object {
          "id": "12-Miss Jamar Romaguera",
          "link": "/sauce/view?s=1e384b2f-4024-4c1a-b93f-dc180e9aaaa8",
          "text": "Miss Jamar Romaguera",
        },
        Object {
          "id": "13-Ms. Rubie Moen",
          "link": "/sauce/view?s=c2498c0d-e840-4045-93a3-7feac3ac327a",
          "text": "Ms. Rubie Moen",
        },
        Object {
          "id": "14-Ms. Ima Shanahan",
          "link": "/sauce/view?s=b540c19a-70a0-409d-8028-a5ceefac098e",
          "text": "Ms. Ima Shanahan",
        },
        Object {
          "id": "15-Dr. April Kohler",
          "link": "/sauce/view?s=f17a92ee-37e3-4dc4-83c4-81f1b8965b8a",
          "text": "Dr. April Kohler",
        },
        Object {
          "id": "16-Miss Keshawn Willms",
          "link": "/sauce/view?s=3fad80e1-a30b-40fc-bda3-0aa34e815344",
          "text": "Miss Keshawn Willms",
        },
        Object {
          "id": "17-Ms. Jennie Sporer",
          "link": "/sauce/view?s=3becfd40-c81a-475c-bc70-55f5fe8366ad",
          "text": "Ms. Jennie Sporer",
        },
        Object {
          "id": "18-Ms. Hosea Bruen",
          "link": "/sauce/view?s=46d77059-832b-44d7-8a11-aba882629420",
          "text": "Ms. Hosea Bruen",
        },
        Object {
          "id": "19-Ms. Gabriel Davis",
          "link": "/sauce/view?s=349a86a5-fdd7-460e-9f6d-0edd8028c4ab",
          "text": "Ms. Gabriel Davis",
        },
        Object {
          "id": "20-Dr. Randi Deckow",
          "link": "/sauce/view?s=73e4a06e-ef6d-4631-880f-aa1848dcb81f",
          "text": "Dr. Randi Deckow",
        },
        Object {
          "id": "21-Ms. Moshe Douglas",
          "link": "/sauce/view?s=aee77a60-41b1-469b-b5fc-164b3c90088d",
          "text": "Ms. Moshe Douglas",
        },
        Object {
          "id": "22-Mr. Jadyn Ebert",
          "link": "/sauce/view?s=a062494c-e3d9-43af-ab21-d444e14811e8",
          "text": "Mr. Jadyn Ebert",
        },
        Object {
          "id": "23-Dr. Vernie Heidenreich",
          "link": "/sauce/view?s=2181c471-0591-4c9c-8ee3-1d5427665c80",
          "text": "Dr. Vernie Heidenreich",
        },
        Object {
          "id": "24-Miss Joyce Sporer",
          "link": "/sauce/view?s=71da346e-7f19-4bff-a304-834a7d876809",
          "text": "Miss Joyce Sporer",
        },
        Object {
          "id": "25-Miss Oswaldo Harber",
          "link": "/sauce/view?s=ee7404b7-31e6-4be5-b10b-cb9fb2145706",
          "text": "Miss Oswaldo Harber",
        },
        Object {
          "id": "26-Mr. Kristy Feest",
          "link": "/sauce/view?s=2b1f7397-839e-4bf0-8147-3610478939b2",
          "text": "Mr. Kristy Feest",
        },
        Object {
          "id": "27-Miss Brielle Jacobs",
          "link": "/sauce/view?s=7995372e-4d05-4065-886e-5661ab31314c",
          "text": "Miss Brielle Jacobs",
        },
        Object {
          "id": "28-Mrs. Thaddeus Koch",
          "link": "/sauce/view?s=5bc03f74-b0cf-47f4-b0e4-7dd6c5e8c1d6",
          "text": "Mrs. Thaddeus Koch",
        },
        Object {
          "id": "29-Mrs. Morris Skiles",
          "link": "/sauce/view?s=c768bce0-f45d-4731-91e6-87eba893139b",
          "text": "Mrs. Morris Skiles",
        },
        Object {
          "id": "30-Mrs. Felicita McDermott",
          "link": "/sauce/view?s=f5e6e170-1b42-4d8e-ae1e-7dc44ea8605e",
          "text": "Mrs. Felicita McDermott",
        },
        Object {
          "id": "31-Mr. Jeanie Windler",
          "link": "/sauce/view?s=1881628e-28c4-479d-bf8a-58860d2a991a",
          "text": "Mr. Jeanie Windler",
        },
      ]
    }
    title="Related Sauces"
  />
</Fragment>
`;

exports[`<SauceRelated /> matches snapshot 8`] = `
<p>
  loading...
</p>
`;

exports[`<SauceRelated /> matches snapshot 9`] = `
<p>
  loading...
</p>
`;

exports[`<SauceRelated /> matches snapshot 10`] = `
<p>
  quas quidem quisquam dicta veniam sunt autem
</p>
`;

exports[`<SauceRelated /> matches snapshot 11`] = `
<p>
  loading...
</p>
`;

exports[`<SauceRelated /> matches snapshot 12`] = `
<p>
  loading...
</p>
`;

exports[`<SauceRelated /> matches snapshot 13`] = `
<p>
  loading...
</p>
`;

exports[`<SauceRelated /> matches snapshot 14`] = `
<p>
  loading...
</p>
`;

exports[`<SauceRelated /> matches snapshot 15`] = `
<p>
  loading...
</p>
`;

exports[`<SauceRelated /> matches snapshot 16`] = `
<p>
  loading...
</p>
`;

exports[`<SauceRelated /> matches snapshot 17`] = `
<p>
  loading...
</p>
`;

exports[`<SauceRelated /> matches snapshot 18`] = `
<p>
  loading...
</p>
`;

exports[`<SauceRelated /> matches snapshot 19`] = `
<p>
  loading...
</p>
`;

exports[`<SauceRelated /> matches snapshot 20`] = `
<p>
  nihil omnis expedita dolores eos et similique
</p>
`;

exports[`<SauceRelated /> matches snapshot 21`] = `
<Fragment>
  <List
    items={
      Array [
        Object {
          "id": "0-Mrs. Cristopher Schowalter",
          "link": "/sauce/view?s=a16068f9-8bde-4953-aa3c-8fda9b847ea3",
          "text": "Mrs. Cristopher Schowalter",
        },
        Object {
          "id": "1-Miss Presley Trantow",
          "link": "/sauce/view?s=4322a02f-4605-4936-aad1-e3856f68ac46",
          "text": "Miss Presley Trantow",
        },
        Object {
          "id": "2-Mr. Lucious Barrows",
          "link": "/sauce/view?s=9bea3df0-45b6-4559-b2c9-0906a38c733f",
          "text": "Mr. Lucious Barrows",
        },
        Object {
          "id": "3-Mrs. Anabel Connelly",
          "link": "/sauce/view?s=6e7c83be-afab-4564-a5c3-63dbc8fba54d",
          "text": "Mrs. Anabel Connelly",
        },
        Object {
          "id": "4-Dr. Savannah Cole",
          "link": "/sauce/view?s=a812f5e8-cdd4-4747-9cd2-6d918180ced8",
          "text": "Dr. Savannah Cole",
        },
        Object {
          "id": "5-Dr. Jerry Bergnaum",
          "link": "/sauce/view?s=c4fe495b-f11d-4af7-8f4b-89aa24321608",
          "text": "Dr. Jerry Bergnaum",
        },
        Object {
          "id": "6-Ms. Newell Kunde",
          "link": "/sauce/view?s=1dfb0b54-f8bf-407e-8470-e296db4b3d7f",
          "text": "Ms. Newell Kunde",
        },
        Object {
          "id": "7-Mrs. Arely Parisian",
          "link": "/sauce/view?s=8f01ffb1-d0c7-41a5-8544-bb5caf10baf7",
          "text": "Mrs. Arely Parisian",
        },
        Object {
          "id": "8-Ms. Eleanora McDermott",
          "link": "/sauce/view?s=93c73599-2363-4c59-ac2e-b7935da39de1",
          "text": "Ms. Eleanora McDermott",
        },
        Object {
          "id": "9-Mrs. Lucius Conroy",
          "link": "/sauce/view?s=20aef9cd-ab73-449b-9529-d74a0ca2b9b5",
          "text": "Mrs. Lucius Conroy",
        },
        Object {
          "id": "10-Miss Felipa Koch",
          "link": "/sauce/view?s=95ca04a3-b053-4c50-9c97-8476725138a3",
          "text": "Miss Felipa Koch",
        },
        Object {
          "id": "11-Mr. Aleen Prosacco",
          "link": "/sauce/view?s=2ef1710e-508d-4d7b-b6ad-f4130f6f9b0a",
          "text": "Mr. Aleen Prosacco",
        },
        Object {
          "id": "12-Ms. Julia Emmerich",
          "link": "/sauce/view?s=2583fe8f-bd8f-41ac-8e62-7e4e9777adb6",
          "text": "Ms. Julia Emmerich",
        },
        Object {
          "id": "13-Ms. Estrella Kemmer",
          "link": "/sauce/view?s=0692e8ed-cdbb-4a49-be8b-2accd8b3d8db",
          "text": "Ms. Estrella Kemmer",
        },
        Object {
          "id": "14-Miss Aron Fadel",
          "link": "/sauce/view?s=94d03751-9019-4cf0-9160-594028880770",
          "text": "Miss Aron Fadel",
        },
        Object {
          "id": "15-Mrs. Elsa Bruen",
          "link": "/sauce/view?s=d2ba199a-d441-4625-8a7b-876b7b802c14",
          "text": "Mrs. Elsa Bruen",
        },
        Object {
          "id": "16-Ms. Lurline Abernathy",
          "link": "/sauce/view?s=1518e546-d33c-4771-853d-d17ec226585d",
          "text": "Ms. Lurline Abernathy",
        },
        Object {
          "id": "17-Mrs. Bret Jenkins",
          "link": "/sauce/view?s=ea173d26-4a16-4070-85a1-7d60bacad172",
          "text": "Mrs. Bret Jenkins",
        },
        Object {
          "id": "18-Mr. Abigayle Murazik",
          "link": "/sauce/view?s=bb2c6a3d-ac91-438f-a0c7-27d06e7aa0e9",
          "text": "Mr. Abigayle Murazik",
        },
        Object {
          "id": "19-Miss Rhianna Kuvalis",
          "link": "/sauce/view?s=a7d2e820-6aab-447a-83eb-c67e90470611",
          "text": "Miss Rhianna Kuvalis",
        },
        Object {
          "id": "20-Mrs. Alba Weimann",
          "link": "/sauce/view?s=60e70fae-8e88-48b7-b79c-e4619cb211a5",
          "text": "Mrs. Alba Weimann",
        },
        Object {
          "id": "21-Dr. Eldora Connelly",
          "link": "/sauce/view?s=81a0168e-c401-42b5-97a6-6abc3cb616c2",
          "text": "Dr. Eldora Connelly",
        },
        Object {
          "id": "22-Ms. Cortney Conroy",
          "link": "/sauce/view?s=8e8744e7-a220-4b1c-a4be-bc07f5ee3a94",
          "text": "Ms. Cortney Conroy",
        },
        Object {
          "id": "23-Miss Maximilian Lynch",
          "link": "/sauce/view?s=e68805b4-87d1-4bfe-93a3-16dced37dbda",
          "text": "Miss Maximilian Lynch",
        },
        Object {
          "id": "24-Dr. Aryanna Luettgen",
          "link": "/sauce/view?s=179e4a47-f6d2-4538-ae51-b0b03b52444b",
          "text": "Dr. Aryanna Luettgen",
        },
        Object {
          "id": "25-Miss Golden Kertzmann",
          "link": "/sauce/view?s=db38b318-f696-494d-a694-9110673d9374",
          "text": "Miss Golden Kertzmann",
        },
        Object {
          "id": "26-Dr. Katrina Breitenberg",
          "link": "/sauce/view?s=a1ba5d6f-67c0-42a7-a851-add5b4fee18d",
          "text": "Dr. Katrina Breitenberg",
        },
        Object {
          "id": "27-Dr. Terrill Gorczany",
          "link": "/sauce/view?s=5d3514ef-2458-4ec0-8eb3-e0d34bc068d3",
          "text": "Dr. Terrill Gorczany",
        },
        Object {
          "id": "28-Miss Harmony Torp",
          "link": "/sauce/view?s=785d9835-ef00-48fa-bec7-16adfe8277cd",
          "text": "Miss Harmony Torp",
        },
        Object {
          "id": "29-Dr. Trenton Ledner",
          "link": "/sauce/view?s=24068ce4-7e04-47dc-ae27-e436ea236436",
          "text": "Dr. Trenton Ledner",
        },
        Object {
          "id": "30-Mr. Buster Abshire",
          "link": "/sauce/view?s=f3f0b963-1549-4692-b49f-ea8d86d7a16e",
          "text": "Mr. Buster Abshire",
        },
        Object {
          "id": "31-Mrs. Will Huels",
          "link": "/sauce/view?s=13ed7202-0d77-403e-9b8c-3c7b95d82aa8",
          "text": "Mrs. Will Huels",
        },
      ]
    }
    title="Related Sauces"
  />
</Fragment>
`;

exports[`<SauceRelated /> matches snapshot 22`] = `
<Fragment>
  <p>
    Could not find any related sauces!
  </p>
</Fragment>
`;

exports[`<SauceRelated /> matches snapshot 23`] = `
<p>
  loading...
</p>
`;

exports[`<SauceRelated /> matches snapshot 24`] = `
<p>
  loading...
</p>
`;

exports[`<SauceRelated /> matches snapshot 25`] = `
<p>
  loading...
</p>
`;

exports[`<SauceRelated /> matches snapshot 26`] = `
<p>
  loading...
</p>
`;

exports[`<SauceRelated /> matches snapshot 27`] = `
<p>
  loading...
</p>
`;

exports[`<SauceRelated /> matches snapshot 28`] = `
<p>
  temporibus vitae cum tempore nulla soluta autem
</p>
`;

exports[`<SauceRelated /> matches snapshot 29`] = `
<p>
  et voluptatem minima vel recusandae ipsum exercitationem
</p>
`;

exports[`<SauceRelated /> matches snapshot 30`] = `
<Fragment>
  <List
    items={
      Array [
        Object {
          "id": "0-Dr. Douglas Dickinson",
          "link": "/sauce/view?s=b3af449a-02e6-43de-b595-3c21fb00d9c8",
          "text": "Dr. Douglas Dickinson",
        },
        Object {
          "id": "1-Miss Erna Rippin",
          "link": "/sauce/view?s=33ce0225-b881-4a75-8101-d557ea7c65de",
          "text": "Miss Erna Rippin",
        },
        Object {
          "id": "2-Ms. Lesly Gerhold",
          "link": "/sauce/view?s=722a1888-496f-4d65-82a2-2768ca74cbca",
          "text": "Ms. Lesly Gerhold",
        },
        Object {
          "id": "3-Ms. Ally Crist",
          "link": "/sauce/view?s=32320bd1-892c-464a-bcd4-6dd582ea967c",
          "text": "Ms. Ally Crist",
        },
        Object {
          "id": "4-Mrs. Felicity Leffler",
          "link": "/sauce/view?s=bff8c6a7-282a-4d67-9622-ae6cd3997b41",
          "text": "Mrs. Felicity Leffler",
        },
        Object {
          "id": "5-Mr. Carolina Grady",
          "link": "/sauce/view?s=6f2b9c5e-3c49-4225-a6b6-56ebca39817d",
          "text": "Mr. Carolina Grady",
        },
        Object {
          "id": "6-Ms. Zoey Crist",
          "link": "/sauce/view?s=119b8b74-0b3e-4ddf-9059-b0e2921738b8",
          "text": "Ms. Zoey Crist",
        },
        Object {
          "id": "7-Miss Ervin Douglas",
          "link": "/sauce/view?s=23b8586b-e5ac-491a-abee-111b3bbf0a76",
          "text": "Miss Ervin Douglas",
        },
        Object {
          "id": "8-Mr. Lavinia Schulist",
          "link": "/sauce/view?s=5057f912-3302-4869-8009-d5ded19660eb",
          "text": "Mr. Lavinia Schulist",
        },
        Object {
          "id": "9-Dr. Manuel Greenfelder",
          "link": "/sauce/view?s=10ee9975-48f1-484a-9328-d3b1674e4d15",
          "text": "Dr. Manuel Greenfelder",
        },
        Object {
          "id": "10-Ms. Yoshiko Price",
          "link": "/sauce/view?s=df97026f-444b-46de-90f7-d1e7c5009956",
          "text": "Ms. Yoshiko Price",
        },
        Object {
          "id": "11-Mrs. Carleton Weber",
          "link": "/sauce/view?s=5c9dcdfd-0c76-46e0-8da8-a00e98783403",
          "text": "Mrs. Carleton Weber",
        },
        Object {
          "id": "12-Mrs. Troy Daugherty",
          "link": "/sauce/view?s=838ebb34-27d9-4181-8a90-0ee6aef80abe",
          "text": "Mrs. Troy Daugherty",
        },
        Object {
          "id": "13-Mrs. Britney Miller",
          "link": "/sauce/view?s=9b9a222e-41c7-43d8-b47c-f83ececfe655",
          "text": "Mrs. Britney Miller",
        },
        Object {
          "id": "14-Mrs. Elza Dicki",
          "link": "/sauce/view?s=468304b0-db42-4ded-bf0b-8fb0d8f6d6ae",
          "text": "Mrs. Elza Dicki",
        },
        Object {
          "id": "15-Mr. Adrain Zboncak",
          "link": "/sauce/view?s=aaccccba-a4e9-4d08-a847-64d155a6b7da",
          "text": "Mr. Adrain Zboncak",
        },
        Object {
          "id": "16-Miss Berry Yundt",
          "link": "/sauce/view?s=6f6bfd0f-d065-4c77-aab3-93e2d45b88b0",
          "text": "Miss Berry Yundt",
        },
        Object {
          "id": "17-Miss Eldon Medhurst",
          "link": "/sauce/view?s=b4f9fcbc-f127-4dab-8b10-0b9faa0988b5",
          "text": "Miss Eldon Medhurst",
        },
        Object {
          "id": "18-Miss Ephraim Rodriguez",
          "link": "/sauce/view?s=04586a2d-3653-4f1e-8cf9-0aa916f31711",
          "text": "Miss Ephraim Rodriguez",
        },
        Object {
          "id": "19-Dr. Bradford Quitzon",
          "link": "/sauce/view?s=f192fa9c-9a88-4edf-97b6-0aeb50c21f84",
          "text": "Dr. Bradford Quitzon",
        },
        Object {
          "id": "20-Miss Consuelo Wolf",
          "link": "/sauce/view?s=3e6e8c31-5ee6-417a-90f5-84da7e298fcb",
          "text": "Miss Consuelo Wolf",
        },
        Object {
          "id": "21-Mrs. Rebeka Kulas",
          "link": "/sauce/view?s=3a5381ab-ebce-4b20-94c8-8147e91ecf68",
          "text": "Mrs. Rebeka Kulas",
        },
        Object {
          "id": "22-Mrs. Joshua Kunde",
          "link": "/sauce/view?s=d15bd935-d7ca-4de5-bf39-326c4e7b4951",
          "text": "Mrs. Joshua Kunde",
        },
        Object {
          "id": "23-Mrs. Lonnie Hyatt",
          "link": "/sauce/view?s=76230508-6294-4959-9508-0182d9c3142b",
          "text": "Mrs. Lonnie Hyatt",
        },
        Object {
          "id": "24-Miss Clarissa McGlynn",
          "link": "/sauce/view?s=86e08f35-b195-489a-976f-55cd56849feb",
          "text": "Miss Clarissa McGlynn",
        },
        Object {
          "id": "25-Ms. Jamel Little",
          "link": "/sauce/view?s=9de6c7be-2109-40d2-955d-29d5bb4856d3",
          "text": "Ms. Jamel Little",
        },
        Object {
          "id": "26-Miss Roosevelt Yost",
          "link": "/sauce/view?s=f71d37c2-0753-4376-a367-719a43c3742b",
          "text": "Miss Roosevelt Yost",
        },
        Object {
          "id": "27-Mrs. Rossie Cremin",
          "link": "/sauce/view?s=d158c71d-c740-4ff3-8088-1cb9e6d22258",
          "text": "Mrs. Rossie Cremin",
        },
        Object {
          "id": "28-Ms. Lisette Johnson",
          "link": "/sauce/view?s=f9328ce3-d3a7-4b42-aee3-d5a31b0b792a",
          "text": "Ms. Lisette Johnson",
        },
        Object {
          "id": "29-Mrs. Roderick Kiehn",
          "link": "/sauce/view?s=442f4b24-4057-4d6e-a8eb-8064d595ae3b",
          "text": "Mrs. Roderick Kiehn",
        },
        Object {
          "id": "30-Mrs. Ivory Blanda",
          "link": "/sauce/view?s=2d7f09db-b011-45e1-bc12-8c388a953a71",
          "text": "Mrs. Ivory Blanda",
        },
        Object {
          "id": "31-Mrs. Eldridge Wisozk",
          "link": "/sauce/view?s=457d59d1-2b19-4f95-9736-5fe22cc5a044",
          "text": "Mrs. Eldridge Wisozk",
        },
      ]
    }
    title="Related Sauces"
  />
</Fragment>
`;

exports[`<SauceRelated /> matches snapshot 31`] = `
<Fragment>
  <List
    items={
      Array [
        Object {
          "id": "0-Mr. Lula Mann",
          "link": "/sauce/view?s=13e3b75a-8d0b-40a8-b493-9e5e8c52563e",
          "text": "Mr. Lula Mann",
        },
        Object {
          "id": "1-Mrs. Monserrate Harber",
          "link": "/sauce/view?s=b6015b36-2f15-4cf6-a708-dfc57865faff",
          "text": "Mrs. Monserrate Harber",
        },
        Object {
          "id": "2-Miss Bulah Beer",
          "link": "/sauce/view?s=73c98399-ab7f-4cd7-be03-dc6577547817",
          "text": "Miss Bulah Beer",
        },
        Object {
          "id": "3-Ms. Athena Stokes",
          "link": "/sauce/view?s=6fed796a-a298-4fce-9029-20eded909da9",
          "text": "Ms. Athena Stokes",
        },
        Object {
          "id": "4-Miss Johathan Kemmer",
          "link": "/sauce/view?s=0b430096-b661-4906-8d51-9bf8a3c88512",
          "text": "Miss Johathan Kemmer",
        },
        Object {
          "id": "5-Miss Wilford Altenwerth",
          "link": "/sauce/view?s=85e71892-d092-416f-bc78-b3271b6b6241",
          "text": "Miss Wilford Altenwerth",
        },
        Object {
          "id": "6-Mrs. Leda Stamm",
          "link": "/sauce/view?s=f542789a-e1df-4919-8376-abc0dbd31cc4",
          "text": "Mrs. Leda Stamm",
        },
        Object {
          "id": "7-Mrs. Mauricio Olson",
          "link": "/sauce/view?s=7ae529a2-f866-404c-8c6e-7b751b6545b7",
          "text": "Mrs. Mauricio Olson",
        },
        Object {
          "id": "8-Mr. Margot Kutch",
          "link": "/sauce/view?s=6d2e719e-d402-4028-8943-8c8ce4d7c016",
          "text": "Mr. Margot Kutch",
        },
        Object {
          "id": "9-Mrs. Wilton Ledner",
          "link": "/sauce/view?s=7f5dc6fe-62aa-409e-85e5-9941ba568c44",
          "text": "Mrs. Wilton Ledner",
        },
        Object {
          "id": "10-Mrs. Bertrand Flatley",
          "link": "/sauce/view?s=9cee0daa-110b-4353-8088-d8871338f64c",
          "text": "Mrs. Bertrand Flatley",
        },
        Object {
          "id": "11-Ms. Jordan Gutkowski",
          "link": "/sauce/view?s=c1c9d771-0723-4038-a9b6-244f59c8d100",
          "text": "Ms. Jordan Gutkowski",
        },
        Object {
          "id": "12-Miss Kelley Olson",
          "link": "/sauce/view?s=0dd85081-6714-47ea-a72f-cf1b009e2926",
          "text": "Miss Kelley Olson",
        },
        Object {
          "id": "13-Ms. Gabriel Bartell",
          "link": "/sauce/view?s=e91ac824-2987-4017-b234-73c1a41b69e8",
          "text": "Ms. Gabriel Bartell",
        },
        Object {
          "id": "14-Mrs. Mortimer Deckow",
          "link": "/sauce/view?s=bc45a085-9d2b-423d-9808-9f41de95ad24",
          "text": "Mrs. Mortimer Deckow",
        },
        Object {
          "id": "15-Dr. Corene Baumbach",
          "link": "/sauce/view?s=19434d2d-171e-4236-8111-76049cacdef7",
          "text": "Dr. Corene Baumbach",
        },
        Object {
          "id": "16-Mr. Lonny Streich",
          "link": "/sauce/view?s=9b60dfed-ff94-4412-95dd-9d52c2c0aae0",
          "text": "Mr. Lonny Streich",
        },
        Object {
          "id": "17-Dr. Keaton Rogahn",
          "link": "/sauce/view?s=c296a27b-417d-4ebe-86cf-5f6ea1aeb06d",
          "text": "Dr. Keaton Rogahn",
        },
        Object {
          "id": "18-Miss Sigrid Padberg",
          "link": "/sauce/view?s=ccfb1ec7-a377-46a0-bfff-4895656b7c20",
          "text": "Miss Sigrid Padberg",
        },
        Object {
          "id": "19-Miss Constantin Bayer",
          "link": "/sauce/view?s=84abc448-7cd0-4380-897d-bc2e70c92a64",
          "text": "Miss Constantin Bayer",
        },
        Object {
          "id": "20-Ms. Hortense Jaskolski",
          "link": "/sauce/view?s=fb7dfd4a-a953-4139-b8c2-6d45e7f78b5d",
          "text": "Ms. Hortense Jaskolski",
        },
        Object {
          "id": "21-Mrs. Ryann Russel",
          "link": "/sauce/view?s=eca1a401-af89-4dfa-92e3-ea453f20c667",
          "text": "Mrs. Ryann Russel",
        },
        Object {
          "id": "22-Ms. Lura Rutherford",
          "link": "/sauce/view?s=55c65344-8c2a-4689-bff9-8a5a368dd776",
          "text": "Ms. Lura Rutherford",
        },
        Object {
          "id": "23-Miss Annabell Hagenes",
          "link": "/sauce/view?s=f7a9e5ee-fd93-4439-a403-e30551d5e2c9",
          "text": "Miss Annabell Hagenes",
        },
        Object {
          "id": "24-Ms. Alvena Lakin",
          "link": "/sauce/view?s=92033b39-3ecc-43e8-9e5d-93fad38d07ef",
          "text": "Ms. Alvena Lakin",
        },
        Object {
          "id": "25-Ms. Abdul Harvey",
          "link": "/sauce/view?s=7ad5ae2d-91c2-4993-b2c0-1bbab3f2c457",
          "text": "Ms. Abdul Harvey",
        },
        Object {
          "id": "26-Miss Kamren Harvey",
          "link": "/sauce/view?s=21b7efac-92d2-4076-825f-de6fcadc6096",
          "text": "Miss Kamren Harvey",
        },
        Object {
          "id": "27-Ms. Antonetta Jaskolski",
          "link": "/sauce/view?s=4d493e7b-85bb-46eb-853a-b03054d9bf29",
          "text": "Ms. Antonetta Jaskolski",
        },
        Object {
          "id": "28-Ms. Delaney Schaden",
          "link": "/sauce/view?s=723e6166-e1f5-418e-89c7-85fec63d5e9d",
          "text": "Ms. Delaney Schaden",
        },
        Object {
          "id": "29-Mr. Mekhi Larson",
          "link": "/sauce/view?s=da626686-f681-4d21-b1ff-38f1f11c6d0c",
          "text": "Mr. Mekhi Larson",
        },
        Object {
          "id": "30-Miss Eloy Turcotte",
          "link": "/sauce/view?s=d2a3b9b2-6ac6-4b90-bd20-4fb1a40e3707",
          "text": "Miss Eloy Turcotte",
        },
        Object {
          "id": "31-Dr. Ressie Reichert",
          "link": "/sauce/view?s=69c3633b-2860-4ee5-a8e4-e919b6e50094",
          "text": "Dr. Ressie Reichert",
        },
      ]
    }
    title="Related Sauces"
  />
</Fragment>
`;

exports[`<SauceRelated /> matches snapshot 32`] = `
<p>
  et eum iste quibusdam tempore excepturi est
</p>
`;
